# TrabajoGradosEAFIT

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/trabajogradoseafit/: pyproject.toml
src/trabajogradoseafit/app/: README.md  app.py  functions.ipynb  users.db
src/trabajogradoseafit/data/: Emotions description.xlsx  ISEAR.csv
src/trabajogradoseafit/data/cleaned/: isear_cleaned.csv  isear_cleaned.parquet
src/trabajogradoseafit/data/data_to_finetune_claude/: isear_train.jsonl  isear_val.jsonl
src/trabajogradoseafit/data/data_to_model/: test_data.csv  train_data.csv  val_data.csv
src/trabajogradoseafit/data/data_to_openai/: isear_train.jsonl  isear_train_prepared.jsonl  isear_val.jsonl  isear_val_prepared.jsonl  tmp_isear_finetune_training.jsonl  tmp_isear_finetune_validation.jsonl
src/trabajogradoseafit/data/fine_tuned_models/: openai_id_models.xlsx
src/trabajogradoseafit/data/model_results/: costo_llm_claude_tl.xlsx  llm_claude_tl.xlsx  llm_distilbert-20.xlsx  llm_distilbert.xlsx  llm_gemini.xlsx  llm_openai_models.xlsx  meta-llama.xlsx  ml_models.xlsx  ml_models_no_preprocessing.xlsx  roberta.xlsx  xlm-roberta.xlsx
src/trabajogradoseafit/notebooks/: 02_classification.ipynb  ChatGPT.ipynb  Claude.ipynb  Claude_fineTuning.ipynb  EDA.ipynb  Gemini.ipynb  HuggingFace_DistilBERT.ipynb  LLM_XLNET.ipynb  Llama.ipynb  ML_Models.ipynb  ML_Models_noPreprocessing.ipynb  NLP_basemodel.ipynb  NLP_distilbert_finetuning.ipynb  NN_Models.ipynb  ROBERTA.ipynb  XLM ROBERTA.ipynb  exp_Dataset.ipynb  llama-3.2.ipynb  meta-llama-3.1-8B-transferlearning.ipynb  models_evaluation.ipynb  splitting_dataset.ipynb  test_DisilBERT.ipynb
src/trabajogradoseafit/notebooks/distilbert-base-uncased-finetuned-emotion/runs/Sep17_23-50-20_DESKTOP-URLSG0S/: events.out.tfevents.1726635027.DESKTOP-URLSG0S.65760.0
src/trabajogradoseafit/notebooks/wandb/: latest-run
src/trabajogradoseafit/notebooks/wandb/run-20241021_195924-othoiufs/: run-othoiufs.wandb
src/trabajogradoseafit/notebooks/wandb/run-20241021_195924-othoiufs/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
src/trabajogradoseafit/notebooks/wandb/run-20241022_221653-p3gznaqu/files/: config.yaml  wandb-metadata.json  wandb-summary.json
src/trabajogradoseafit/notebooks/wandb/run-20241023_075622-eliuzasm/: run-eliuzasm.wandb
src/trabajogradoseafit/notebooks/wandb/run-20241023_075622-eliuzasm/files/: requirements.txt  wandb-metadata.json
