[project]
name = "TrabajoGradosEAFIT"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David López", email = "david.lopeza98@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "datasets>=2.19.1",
    "notebook>=7.2.0",
    "kaggle>=1.6.14",
    "openpyxl>=3.1.2",
    "plotly>=5.22.0",
    "scikit-learn>=1.5.1",
    "seaborn>=0.13.2",
    "gensim>=4.3.3",
    "tqdm>=4.66.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []
