[project]
name = "TrabajoGradosEAFIT"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David López", email = "david.lopeza98@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "notebook>=7.2.0",
    "kaggle>=1.6.17",
    "openpyxl>=3.1.2",
    "plotly>=5.22.0",
    "scikit-learn>=1.5.1",
    "seaborn>=0.13.2",
    "gensim>=4.3.3",
    "tqdm>=4.66.5",
    "keras>=3.5.0",
    "transformers[torch]>=4.44.2",
    "ipywidgets>=8.1.5",
    "torch>=2.4.1",
    "umap-learn>=0.5.6",
    "UMAP>=0.1.1",
    "matplotlib>=3.9.2",
    "tf-keras>=2.17.0",
    "accelerate>=0.34.2",
    "evaluate>=0.4.3",
    "sentencepiece>=0.2.0",
    "datasets>=3.0.0",
    "pipeline>=0.1.0",
    "nltk>=3.9.1",
    "openai>=1.51.2",
    "python-dotenv>=1.0.1",
    "anthropic>=0.36.0",
    "huggingface-hub>=0.26.1",
    "bitsandbytes>=0.44.1",
    "peft>=0.13.2",
    "trl>=0.11.4",
    "wandb>=0.18.5",
    "google-generativeai>=0.8.3",
    "streamlit>=1.39.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []
