[tool.poetry]
name = "TrabajoGradosEAFIT"
version = "0.1.0"
description = "Default template for PDM package"
authors = ["dalopeza98 <david.lopeza98@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = "==3.10.*"

[tool.poetry.dependencies]
python = "==3.10.*"
streamlit = ">=1.39.0"
openai = ">=1.53.0"

[build-system]
requires = ["pdm-backend>=0.12.0"]
build-backend = "pdm.backend"
